11/01/13: Released as Version 1.1.2
	Fix compiler warning for stable release. I'll break that later.

10/29/13:
	Minor Bluelog theme touchups
	Add basic theming info to README.LIVE

10/20/13:
	Add documentation for manufacturer lookups "-m"
	Higher resolution Bluelog logo, scale down in CSS for themes
	Added GitHub README.md

10/14/13:
	Add support for additional CSS elements in Live UI
	Add link to GitHub page in Live "About"
	Merge in libmackerel 1.1
	LCARS looking much better

10/13/13:
	New default theme for Bluelog Live, WIP
	Improvements to LCARS theme

04/11/13:
	Initial work on Pwn Pad target:
	No Live, OUI enabled, changed default log location, UI changes
	Cache size reduced for Pwn Plug and Pwn Pad

04/04/13:
	Added LCARS theme for Bluelog Live. Problem?

04/03/13:
	Fix Makefile after removing doc files

04/01/13:
	Removed README.BAKTRK, redundant info
	Removed FUTURE, most major items accomplished

03/31/13: 
	Makefile now downloads OUI list during build

03/30/13: Released as Version 1.1.1
	Added "standalone" target to Makefile, kind of hacky
	Removed SSI and Perl Bluelog Live modes, CGI is the future!
	Bluelog Live can now display device manufacturer if launched with "-m"
	Updated README.LIVE (needs improvement)

03/27/13:
	Merged in libmackerel
	Merged in MACLIST from haraldscan
	Experimental manufacturer lookups (currently x86 only)
	Configuration options broken out into config.h

02/24/13:
	Allow for friendly class names in verbose mode, thanks Dean

01/31/13:
	EXPERIMENTAL: Added -e option to encode MACs with CRC32
	Updated MAN page
	Updated README

01/24/13:
	Improved memory management, thanks Paolo

12/28/12:
	Improved file cleanup, less idiotic

12/25/12: Released as Version 1.1.0 (Come All Ye Faithful Edition)
	Removed CGI mobile page, not ready for stable release
	Updated README

12/17/12:
	Only log device discovery to syslog if enabled with -s
	Added -w option to adjust scan window
	Reordered MAN page

12/13/12: